Fix alignment of flowers in header

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,6 @@ header {
   grid-area: head;
   font-size: 21px;
   color: white;
-  padding-left:15px;
   background-color:rgba(255,255,255,0.3);
 }
 
@@ -194,8 +193,16 @@ header {
 }
 
 .flowerOutline {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flowerOutline img {
   height: 75px;
-  padding-top:5px;
+  padding-top: 5px;
 }
 a {
   text-decoration: none;
